# medokchat

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  example.json  package-lock.json  package.json
.github/: SECRETS.md
.github/workflows/: deploy.yml  terraform-apply.yml  terraform-destroy.yml
agents/: Dockerfile  context_filter.py  main.py  med_doc.html  orchestrator.py  pyproject.toml  ui.py
agents/med_documentation/: agent.py  tools.py
agents/med_finder/: agent.py  tools.py
agents/orchestrator/: agent.py
agents/tests/: test_med_documentation_tools.py
app/: layout.tsx  page.tsx
app/api/copilotkit/: route.ts
components/: chat.tsx  med-doc-panel.tsx
docs/superpowers/plans/: 2026-04-25-med-documentation-agent.md
docs/superpowers/specs/: 2026-04-25-med-documentation-agent-design.md
infra/: CLAUDE.md
infra/preprod/: main.tf  outputs.tf  variables.tf
infra/preprod/docker/: Caddyfile  docker-compose.yml
