[project]
name = "medokchat-agents"
version = "0.1.0"
description = "Multi-agent backend for medokchat — Google ADK + Gradio"
requires-python = ">=3.10"

dependencies = [
    # Google ADK — used by Orchestrator and Analysis agents
    "google-adk==1.31.1",
    "litellm>=1.0.0",
    # LangGraph — used by Research agent
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    # Utilities
    "python-dotenv>=1.0.0",
    "openai>=1.0.0",
    # UI
    "gradio>=5.0.0",
    # HTML parsing (med_documentation)
    "lxml>=5.0.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "respx>=0.21.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
prerelease = "if-necessary-or-explicit"
